--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 		"url-loader": "^3.0.0"
 	},
 	"dependencies": {
+		"@fontsource/fira-sans": "4.5.8",
+		"@fontsource/lato": "4.5.8",
 		"core-js": "^3.6.5",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
