--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"regenerator-runtime": "0.13.7",
-		"tslib": "^2.3.0"
+		"tslib": "^2.3.0",
+		"use-ful-hooks-ts": "1.2.1"
 	}
 }
